--- a/src/style/utilities.scss
+++ b/src/style/utilities.scss
@@ -3,8 +3,21 @@
     padding-bottom: 30px;
 }
 
+p{
+    color: #9391a6;
+}
+
 h1{
     color: #3f3a64;
+}
+
+h3{
+    font-size: 20px ;
+} 
+
+h4{
+    color: #88898b;
+    font-size: 12px;
 }
 
 .content-position{
@@ -21,6 +34,23 @@ h1{
   border-radius: 5px;
 }
 
+.button-event-card{
+  text-decoration: none;
+  color: white;
+  background-color: #20ad96;
+  padding: 5px 5px;
+  border-radius: 5px;
+}
+
+.padding-lr{
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
 .card-style{
     border: none;
+}
+
+.word-green{
+    color: #3ead96;
 }
